@@ -81,6 +81,7 @@ source "package/libiconv/Config.in"
 source "package/libidn/Config.in"
 source "package/liblockfile/Config.in"
 source "package/liboil/Config.in"
+source "package/librsync/Config.in"
 source "package/libsysfs/Config.in"
 source "package/lockfile-progs/Config.in"
 source "package/logrotate/Config.in"
